--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -8,6 +8,9 @@
   <div class="row">
     <div class="col">
       <h1>About</h1>
+      <p>This is an experimental application of convolutional neural network.
+        Please upload one digit of handwritten number on a black or white background image in jpeg or png format.
+      </p>
     </div>
   </div>
 </div>
